hphp/test/slow/parser/unset_class_constant_dim0.php.expectf
Fatal error: You cannot use this syntax in an `unset()` expression. in %s/unset_class_constant_dim0.php on line 10